feat: overhaul multi-store price comparison
Replace AI extraction with parser-driven store scraping. Add optional Playwright rendering, store health tracking, grouped store offers, and per-product price ranges in the frontend.